# resonance-net

./: .gitignore  CMakeLists.txt  README.md  REPORT.md
include/: config.h  dist.h  layers.h  resonance_net.h
scripts/: test_gen.sh  train_100k.sh  train_ddp.sh
src/: causal_conv.cu  data_loader.cpp  dist.cpp  embedding.cu  main.cpp  min_gru.cu  optimizer.cu  resonance_net.cpp  rms_norm.cu  slot_memory.cu  swiglu_ffn.cu
